<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true"
    tools:context=".recordSound">

    <LinearLayout
        android:id="@+id/recLinearLayout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/flame_style"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longRecordText">

        <TextView
            android:id="@+id/recFileNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/maxRecordTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/flame_rec_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/soundLevelBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/soundLevelBar">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_norecording"
                android:minHeight="0dp"
                android:text="@string/recordingText"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_recording"
                android:minHeight="0dp"
                android:text="@string/recordingText"
                android:textSize="16dp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="497dp" />

        </FrameLayout>


        <TextView
            android:id="@+id/recordTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recordTimeText"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/markerWavText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#969678"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/recordTimeText"
            app:layout_constraintTop_toBottomOf="@+id/recordTimeText" />

        <TextView
            android:id="@+id/soundLevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/soundLevelText"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/recordTimeText"
            app:layout_constraintTop_toBottomOf="@+id/markerWavText" />

        <ProgressBar
            android:id="@+id/soundLevelBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:indeterminate="false"
            android:progressDrawable="@drawable/custom_progress"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout3"
            app:layout_constraintStart_toStartOf="@+id/soundLevelText"
            app:layout_constraintTop_toBottomOf="@+id/soundLevelText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/recordBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/recordBtnText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/recordBtnImage"
        app:layout_constraintTop_toTopOf="@+id/recordBtnImage" />

    <ImageView
        android:id="@+id/recordBtnImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="record"
        android:src="@drawable/arecordbtn"
        app:layout_constraintEnd_toStartOf="@+id/stopBtnImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/newRecortBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/newRecordText"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/newRecordBtnImage"
        app:layout_constraintTop_toTopOf="@+id/newRecordBtnImage" />

    <ImageView
        android:id="@+id/playBtnImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="play"
        android:src="@drawable/playbtn"
        app:layout_constraintStart_toStartOf="@+id/recordBtnImage"
        app:layout_constraintTop_toBottomOf="@+id/recordBtnImage" />

    <TextView
        android:id="@+id/playBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/playBtnText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/playBtnImage"
        app:layout_constraintTop_toTopOf="@+id/playBtnImage" />

    <ImageView
        android:id="@+id/stopBtnImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="stop"
        android:src="@drawable/stopbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recordBtnImage"
        app:layout_constraintTop_toTopOf="@+id/recordBtnImage" />

    <TextView
        android:id="@+id/stopBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/stopBtnText"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/stopBtnImage"
        app:layout_constraintTop_toTopOf="@+id/stopBtnImage" />

    <ImageView
        android:id="@+id/newRecordBtnImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="newrecord"
        android:src="@drawable/newrecordbtn"
        app:layout_constraintStart_toStartOf="@+id/stopBtnImage"
        app:layout_constraintTop_toTopOf="@+id/playBtnImage" />

    <TextView
        android:id="@+id/longRecordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/longRecordText"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/playBtnText"
        app:layout_constraintTop_toBottomOf="@+id/playBtnImage" />

    <Switch
        android:id="@+id/longRecordSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mygray"
        android:thumbTint="@color/myblue"
        android:trackTint="@color/mygray"
        app:layout_constraintBottom_toBottomOf="@+id/longRecordText"
        app:layout_constraintStart_toStartOf="@+id/newRecordBtnImage"
        app:layout_constraintTop_toTopOf="@+id/longRecordText" />

</androidx.constraintlayout.widget.ConstraintLayout>